crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__match.py_3.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func(status):
%%     match status:
%%         case 1 | 2 | 3:
%%             return 5
%%     return 6

flowchart TD
  start(("Start"))
  return(("End"))
  block0["return 6\n"]
  block1["return 5\n"]
  block2["match status:
        case 1 | 2 | 3:
            return 5\n"]

  start --> block2
  block2 -- "case 1 | 2 | 3" --> block1
  block2 -- "else" --> block0
  block1 --> return
  block0 --> return

