crates/ruff/src/rules/ruff/rules/snapshots/ruff__rules__ruff__rules__unreachable__tests__match.py_6.snap
---
source: crates/ruff/src/rules/ruff/rules/unreachable.rs
---
%% Source code:
%% def func(status):
%%     i = 0
%%     match status, i:
%%         case _, _:
%%             return 0

flowchart TD
  start(("Start"))
  return(("End"))
  block0[["`*(empty)*`"]]
  block1["return 0\n"]
  block2["match status, i:
        case _, _:
            return 0\n"]
  block3["i = 0\n"]

  start --> block3
  block3 --> block2
  block2 -- "case _, _" --> block1
  block2 -- "else" --> block0
  block1 --> return
  block0 --> return

